Fixed bug #35303 (PDO prepare() crashes with invalid parameters).